# Cogniform

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  find_versions.py  pyproject.toml  responses.db
.github/workflows/: cd.yml  ci.yml
.github/workflows/ci.yml /: CD
app/: main.py
app/api/: routes.py
app/models/: demographics.py  tasks.py
app/services/: database.py
app/tasks/: base.py  crt.py  delay_discounting.py
cogniform/: main.py
cogniform/api/: routes.py
cogniform/core/: config.py
cogniform/models/: demographics.py  user.py
cogniform/services/: analysis.py
cogniform/tasks/: __init__.py
templates/static/: crt.html  delay_discounting.html  demographics.html  home.html  index.html  my_result.html  results.html  styles.css
tests/: test_api.py  test_services.py  test_tasks.py
tests/test_models/: test_demographics.py  test_tasks.py  test_user.py
tests/test_services/: test_analysis.py  test_database.py
tests/test_tasks/: test_base.py  test_crt.py  test_delay_discounting.py
