[tool.poetry]
name = "cogniform"
version = "0.1.0"
description = "An interactive cognitive science survey platform."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
pydantic = "^1.9.0"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
sqlite = "^3.36.0"  # or any other database library you choose

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
flake8 = "^4.0.0"
black = "^22.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"