[tool.poetry]
name = "cogniform"  # The name of your package
version = "0.1.0"  # The version of your package
description = "An interactive cognitive science survey platform."
authors = ["Astane"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
pydantic = "^1.9.0"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
sqlalchemy = "^1.4.0"
jinja2 = "^3.1.0"
python-multipart = "^0.0.20"
pytest = "^7.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
flake8 = "^4.0.0"
black = "^22.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"