[tool.poetry]
name = "cogniform"  # The name of your package
version = "0.1.0"  # The version of your package
description = "An interactive cognitive science survey platform."
authors = ["Astane"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12.2"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pydantic = "^2.10.6"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
sqlalchemy = "^2.0.34"
jinja2 = "^3.1.6"
python-multipart = "^0.0.20"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
flake8 = "^7.0.0"
black = "^24.8.0"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"